<resources>
    <string name="app_name">Мой кошелек</string>
    <string name="action_settings">Настройки</string>
    <string name="type_incoming">Приход</string>
    <string name="type_expense">Расход</string>
    <string name="category_name_title">Название категории:</string>
    <string name="type_title">Тип категории:</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="cat">кат.</string>
    <string name="add_category">Добавить категорию</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="category_titile">Категория:</string>
    <string name="sum_title">Сумма:</string>
    <string name="_0_0">0.00</string>
    <string name="rub_kop">руб.</string>
    <string name="comment_title">Комментарий:</string>
    <string name="text_add">Добавить</string>
    <string name="time_title">Время:</string>
    <string name="in_balance_title">Начальный остаток:</string>
    <string name="out_balance_title">Конечный остаток:</string>
    <string name="input_sum_or_press_back">Введите сумму или нажмите Назад.</string>
    <string name="edit_categories">Редактировать категории</string>
    <string name="expand_list_on_load">Раскрывать список операций при загрузке</string>
    <string name="report_for_period">Отчет за период</string>
    <string name="period_start_title">Начало периода:</string>
    <string name="period_end_title">Конец периода:</string>
    <string name="total_income_title">Всего приход:</string>
    <string name="total_expense_title">Всего расход:</string>
    <string name="sevenlis">\@sevenlis</string>
    <string name="about_app">О приложении</string>
    <string name="add_new_category">Добавить новую категорию</string>
    <string name="storage_permission_rationale">Доступ к хранилищу нужен для проверки и получения обновлений</string>
    <string name="grant">Разрешить</string>
    <string name="update_available">Доступно обновление</string>
    <string name="update_to_version">Обновить до версии {0}</string>
    <string name="press_to_start_update">Нажмите чтобы начать обновление</string>
    <string name="update_downloading">Загрузка обновления...</string>
    <string name="del_operation">Удалить операцию</string>
    <string name="edit_operation">Редактировать операцию</string>
    <string name="list_font_size">Размер шрифта в списке</string>
</resources>
