<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.sevenlis.simplewallet.activity.OperationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dim_8dp">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewCategoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_titile"/>

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dim_16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sum_title"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/editTextSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dim_8dp"
                android:layout_marginStart="@dimen/dim_16dp"
                android:layout_weight="1"
                android:ems="4"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:text="@string/_0_0"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewRubKop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rub_kop"
                android:textSize="24sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewCommentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16dp"
            android:text="@string/comment_title"
            android:labelFor="@id/editTextComment"/>

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dim_16dp"
            android:paddingEnd="@dimen/dim_32dp"
            android:paddingStart="@dimen/dim_32dp"
            android:text="@string/text_add"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
