<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dim_8dp">

        <TextView
            android:id="@+id/textViewNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_name_title"
            android:labelFor="@id/editTextName"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="">
            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/textViewTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_weight="1"
            android:text="@string/type_title"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="0dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/fab_margin"
            android:paddingStart="@dimen/fab_margin">

            <RadioButton
                android:id="@+id/radioButtonExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type_expense"/>

            <RadioButton
                android:id="@+id/radioButtonIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type_incoming"/>

        </RadioGroup>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
